<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">ADW.Launcher</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpaper gallery</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="launcher_actions">Launcher Actions</string>
    <string name="group_search">Search</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="add_search">Search</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_adw_settings">ADWSettings</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="search_hint">Google Search</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="adw_version">Version 1.2.0 System</string>
    <string name="pref_label_settings">AlmostNexus Settings</string>
    <string name="pref_title_screen_preferences">Screen preferences</string>
    <string name="pref_summary_screen_preferences">Default screen, layout...</string>
    <string name="pref_title_wallpaper_hack">Wallpaper Hack</string>
    <string name="pref_summary_wallpaper_hack">Disable this if you get FCs. Leaving it enabled improves the scrolling speed.</string>
    <string name="pref_title_orientation_sensor">Home Orientation</string>
    <string name="pref_summary_orientation_sensor">Select your desired orientation</string>
    <string name="pref_title_hide_statusbar">Hide StatusBar</string>
    <string name="pref_summary_hide_statusbar">Hides your statusbar</string>
    <string name="pref_title_default_screen">Default Screen</string>
    <string name="pref_summary_default_screen">Select the screen to set as default</string>
    <string name="pref_dialog_default_screen">Select the screen to set as default</string>
    <string name="pref_title_desktop_scrolling_speed">Desktop scrolling speed</string>
    <string name="pref_summary_desktop_scrolling_speed">Set the speed used to fling desktops screens</string>
    <string name="pref_dialog_desktop_scrolling_speed">The lower the value, the faster you will fling</string>
    <string name="pref_title_desktop_overshoot">Desktop overshoot</string>
    <string name="pref_summary_desktop_overshoot">Allows bouncy scrolling desktop screens</string>
    <string name="pref_dialog_desktop_overshoot">Set it to 0 to disable overshooting</string>
    <string name="pref_title_drawer_settings">Drawer Settings</string>
    <string name="pref_summary_drawer_settings">App drawer grid preferences</string>
    <string name="pref_title_zoom_effect_speed">Zoom effect speed</string>
    <string name="pref_summary_zoom_effect_speed">Set the time in milliseconds for the zoom effect</string>
    <string name="pref_dialog_zoom_effect_speed">Set the time in milliseconds for the zoom effect</string>
    <string name="pref_title_page_horizontal_margin">Page Horizontal Margin</string>
    <string name="pref_summary_page_horizontal_margin">Set the horizontal margin between each pages of Drawer</string>
    <string name="pref_dialog_page_horizontal_margin">Set the horizontal margin between each pages of Drawer</string>
    <string name="pref_title_new_drawer">Horizontal Drawer</string>
    <string name="pref_summary_new_drawer">Use the Samsung Galaxy S implementation</string>
    <string name="pref_title_animated_drawer">Animated Drawer</string>
    <string name="pref_summary_animated_drawer">Turns whether App Drawer should display animations</string>
    <string name="pref_title_drawer_columns_portrait">Drawer Columns Portrait</string>
    <string name="pref_summary_drawer_columns_portrait">Select the number of drawer columns to use on portrait layout</string>
    <string name="pref_dialog_drawer_columns_portrait">Select the number of drawer columns to use on portrait layout</string>
    <string name="pref_title_drawer_rows_portrait">Drawer Rows Portrait</string>
    <string name="pref_summary_drawer_rows_portrait">Select the number of drawer rows to use on portrait layout</string>
    <string name="pref_dialog_drawer_rows_portrait">Select the number of drawer rows to use on portrait layout</string>
    <string name="pref_title_drawer_columns_landscape">Drawer Columns Landscape</string>
    <string name="pref_summary_drawer_columns_landscape">Select the number of drawer columns to use on landscape layout</string>
    <string name="pref_dialog_drawer_columns_landscape">Select the number of drawer columns to use on landscape layout</string>
    <string name="pref_title_drawer_rows_landscape">Drawer Rows Landscape</string>
    <string name="pref_summary_drawer_rows_landscape">Select the number of drawer rows to use on landscape layout</string>
    <string name="pref_dialog_drawer_rows_landscape">Select the number of drawer rows to use on landscape layout</string>
    <string name="pref_title_previews_preferences">Previews Settings</string>
    <string name="pref_summary_previews_preferences">Desktop previews preferences</string>
    <string name="pref_title_sense_previews">Sense previews</string>
    <string name="pref_summary_sense_previews">Use the new sense-like implementation</string>
    <string name="pref_title_clean_screen_mode">Clean Screen Mode</string>
    <string name="pref_summary_clean_screen_mode">Hide home icons/widgets when opening previews</string>
    <string name="pref_title_ui_settings">UI Settings</string>
    <string name="pref_summary_ui_settings">Enable/disable ui elements</string>
    <string name="pref_title_home_button_binding">Home button binding</string>
    <string name="pref_summary_home_button_binding">Select action for home button binding</string>
    <string name="pref_title_swipedown_actions">Swipe down actions</string>
    <string name="pref_summary_swipedown_actions">Select action for Swipe down gesture</string>
    <string name="pref_title_swipeup_actions">Swipe up actions</string>
    <string name="pref_summary_swipeup_actions">Select action for Swipe up gesture</string>
    <string name="pref_title_desktop_dots">Desktop dots</string>
    <string name="pref_summary_desktop_dots">Show/hide the nexus style pagination dots</string>
    <string name="pref_title_dockbar">Dockbar</string>
    <string name="pref_summary_dockbar">Enable/disable the new dockbar for your shortcuts</string>
    <string name="pref_title_closing_dockbar">Closing dockbar</string>
    <string name="pref_summary_closing_dockbar">Auto-close dockbar after app-launch</string>
    <string name="pref_title_closing_folder">Closing folder</string>
    <string name="pref_summary_closing_folder">Auto-close folder after app-launch</string>
    <string name="pref_title_lab">LAB</string>
    <string name="pref_summary_lab">Enable/disable the customizable Left Action Button</string>
    <string name="pref_title_rab">RAB</string>
    <string name="pref_summary_rab">Enable/disable the customizable Right Action Button</string>
    <string name="pref_title_ab2">Secondary ActionButtons</string>
    <string name="pref_summary_ab2">Enable/disable the secondary Action Buttons (disable Desktop dots)</string>
    <string name="pref_title_tint_ab">Tint AB</string>
    <string name="pref_summary_tint_ab">Enable/disable icon tint effect on Action Buttons</string>
    <string name="pref_title_ab_scale_factor">AB scale factor</string>
    <string name="pref_summary_ab_scale_factor">Set the scaling size for the ActionButton icons</string>
    <string name="pref_title_build_info">Build Information</string>
    <string name="pref_title_desktop_columns">Desktop Columns</string>
    <string name="pref_summary_desktop_columns">Select the number of columns to use on desktop</string>
    <string name="pref_dialog_desktop_columns">Select the number of columns to use on desktop</string>
    <string name="pref_title_desktop_rows">Desktop Rows</string>
    <string name="pref_summary_desktop_rows">Select the number of rows to use on desktop</string>
    <string name="pref_dialog_desktop_rows">Select the number of rows to use on desktop</string>
    <string name="pref_title_autosize_icons">Auto Stretch</string>
    <string name="pref_summary_autosize_icons">Try to stretch icons/widgets so they don\'t overlap</string>
	<string name="pref_title_screens_preferencecategory">Desktop screens</string>
	<string name="pref_title_screens_layout_preferencecategory">Desktop layout</string>
	<string name="pref_title_screens_behaviour_preferencecategory">Desktop behavior</string>
	<string name="pref_title_theme_settings">Themes Preferences</string>
	<string name="pref_summary_theme_settings">Select themes for ADW.Launcher</string>
	<string name="pref_title_theme_package">Select your theme</string>
	<string name="pref_summary_theme_package">Choose your theme for ADW.Launcher</string>
	<string name="pref_title_theme_icons">Use Theme Icons</string>
	<string name="pref_summary_theme_icons">Deselect this to use standard OS icons</string>
    <string name="pref_title_wallpaper_scrolling">Wallpaper Scrolling</string>
    <string name="pref_summary_wallpaper_scrolling">Allow wallpaper to move while scrolling screens</string>
	<string name="pref_title_adw_reset">Reset Launcher</string>
	<string name="pref_summary_adw_reset">Clear Launcher settings and restart</string>
</resources>