<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
	<PreferenceScreen
		android:key="screenPreferences"
		android:title="@string/pref_title_screen_preferences"
		android:summary="@string/pref_summary_screen_preferences">
		<CheckBoxPreference android:title="@string/pref_title_hide_statusbar"
			android:defaultValue="true"
			android:summary="@string/pref_summary_hide_statusbar"
			android:key="hideStatusbar" />
		<CheckBoxPreference android:title="@string/pref_title_wallpaper_scrolling"
			android:defaultValue="true"
			android:summary="@string/pref_summary_wallpaper_scrolling"
			android:key="wallpaper_scrolling" />
		<PreferenceCategory
            android:title="@string/pref_title_screens_preferencecategory">
			<com.ranger.launcher.child.DialogSeekBarPreference
				android:title="@string/pref_title_default_screen" android:summary="@string/pref_summary_default_screen"
				android:dialogMessage="@string/pref_dialog_default_screen"
				android:key="defaultScreen" android:defaultValue="2" android:max="4" />
		</PreferenceCategory>
		<PreferenceCategory
            android:title="@string/pref_title_screens_layout_preferencecategory">
			<CheckBoxPreference android:title="@string/pref_title_autosize_icons"
				android:defaultValue="false"
				android:summary="@string/pref_summary_autosize_icons"
				android:key="autosizeIcons" />
			<com.ranger.launcher.child.DialogSeekBarPreference
				android:title="@string/pref_title_desktop_columns"
				android:summary="@string/pref_summary_desktop_columns"
				android:dialogMessage="@string/pref_dialog_desktop_columns"
				android:key="desktopColumns" android:defaultValue="@integer/config_desktopColumns"
				android:max="5" />
			<com.ranger.launcher.child.DialogSeekBarPreference
				android:title="@string/pref_title_desktop_rows"
				android:summary="@string/pref_summary_desktop_rows"
				android:dialogMessage="@string/pref_dialog_desktop_rows"
				android:key="desktopRows" android:defaultValue="@integer/config_desktopRows"
				android:max="5" />
		</PreferenceCategory>
		<PreferenceCategory
            android:title="@string/pref_title_screens_behaviour_preferencecategory">
			<com.ranger.launcher.child.DialogSeekBarPreference
				android:title="@string/pref_title_desktop_scrolling_speed"
				android:summary="@string/pref_summary_desktop_scrolling_speed"
				android:dialogMessage="@string/pref_dialog_desktop_scrolling_speed"
				android:key="desktopSpeed" android:defaultValue="@integer/config_desktopSpeed"
				android:max="2000" />
			<com.ranger.launcher.child.DialogSeekBarPreference
				android:title="@string/pref_title_desktop_overshoot"
				android:summary="@string/pref_summary_desktop_overshoot"
				android:dialogMessage="@string/pref_dialog_desktop_overshoot"
				android:key="desktopBounce" android:defaultValue="@integer/config_desktopBounce"
				android:max="100" />
		</PreferenceCategory>
	</PreferenceScreen>
	<PreferenceScreen
		android:key="themePrefences"
		android:summary="@string/pref_summary_theme_settings"
		android:title="@string/pref_title_theme_settings">
			<CheckBoxPreference android:key="themeIcons"
				android:title="@string/pref_title_theme_icons"
				android:summary="@string/pref_summary_theme_icons"
				android:defaultValue="true" />
			<ListPreference
			  android:key="themePackageName"
			  android:title="@string/pref_title_theme_package"
			  android:summary="@string/pref_summary_theme_package"
			  />
    		<com.ranger.launcher.child.PreviewPreference
    			android:layout="@layout/theme_preview"
	    		android:key="themePreview" />
		
	</PreferenceScreen>	
	<PreferenceCategory android:title="@string/pref_title_build_info">
		<Preference
			android:key="adw_reset"
			android:title="@string/pref_title_adw_reset"
			android:summary="@string/pref_summary_adw_reset"/>
	</PreferenceCategory>
</PreferenceScreen>
